--- a/README
+++ b/README
@@ -1,62 +1,57 @@
-jQuery.UI.Timeslider plugin, v0.1
-
-Creates a range slider component for selecting a time period
-
-REQUIRES:
-- jQuery (1.4.4 and up)
-- jQuery UI (1.8.10 and up)
-- jQuery.UI.iPad plugin (http://code.google.com/p/jquery-ui-for-ipad-and-iphone/)
-- jQuery Mousewheel plugin (https://github.com/brandonaaron/jquery-mousewheel)
-- timelineslider.css
-
-EXAMPLE:
-$.getJSON(json, function(data) {
-		$(selector).timelineSlider({
-			periods: data.periods,
-			end: data.end
-		})
-		.addTouch();
-}
-
-OPTIONS:
-To access the option values, use $(selector).data("settings").optionname
-from 					- index of the first period in selection
-height 					- height of the thumb
-maxzoom 				- the maximum zoom level, equal to the deepest period level
-minzoom 				- minimum zoom level
-periods 				- JSON object representing the periods, optionally hierarchical
-scrollspeed				- scroll speed for autoscroll feature, 0 to disable autoscroll
-step					- minimal width (in pixels) of the period in the timeline
-to						- index of the last period in selection
-zoom					- initial zoom level
-
-EVENTS:
-To add an eventlistener, add this to the option list on init: onEventName: function(){do stuff}
-onAutoScroll			- triggered when timelineslider is autoscrolling (when thumb is dragged beyond the viewpane)
-onCreate				- triggered right after creation of the timelineslider 
-onScaleStart			- triggered when the left or right thumb handles start to get dragged
-onScale					- triggered when the left or right thumb handles are being dragged
-onScaleStop				- triggered when the left or right thumb handles are released after being dragged
-onSlideStart			- triggered when the thumb starts to get dragged
-onSlide					- triggered when the thumb is being dragged
-onSlideStop				- triggered when the thumb is released after being dragged
-onValueChange			- triggered when the selected period has changed
-onZoomChange			- triggered when a zoom in or out occurs
-
-METHODS:
-To call a method, use $(selector).timelineSlider("nameOfMethod", parameters)
-from([index])			- sets from value, when index is omitted gets from value
-to([index])				- sets to value, when index is omitted gets to value
-setValue(val)			- sets a new from and to value, accepts an object with from and to {from:val1,to:val2} // OBSOLETE
-values([val])			- sets sets a new from and to value, accepts an object with from and to {from:val1,to:val2}, when omitted gets values object
-setZoomLevel(level)		- sets the zoom level, accepts integer
-destroy					- removes the timelineslider component
-
-TODO: calculate step size for exact period fit, based on preferred width (step parameter) OR ANY OTHER SOLUTION TO THIS PROBLEM
-TODO: autoscroll on scale
-TODO: Show period status (data/no data)
-TODO: Show indicator
-
-KNOWN BUG: thumb is centered after scroll when it was at maximum position
-KNOWN BUG: can't select last period when step is not exactly right to fit in screen
-KNOWN BUG: destroy doesn't work
+/*
+ * jQuery.UI.Timeslider plugin
+ * 
+ * Creates a range slider component for selecting a time period
+ * 
+ * REQUIRES:
+ * - jQuery (1.4.4 and up)
+ * - jQuery UI (1.8.10 and up)
+ * - jQuery.UI.iPad plugin (http://code.google.com/p/jquery-ui-for-ipad-and-iphone/)
+ * - jQuery Mousewheel plugin (https://github.com/brandonaaron/jquery-mousewheel)
+ * - timelineslider.css
+ * 
+ * EXAMPLE:
+ * $.getJSON(json, function(data) {
+ * 		$(selector).timelineSlider({
+ * 			periods: data.periods,
+ * 			end: data.end
+ * 		})
+ * 		.addTouch();
+ * }
+ * 
+ * OPTIONS:
+ * To access the option values, use $(selector).data("settings").optionname
+ * from 				- index of the first period in selection
+ * height 				- height of the thumb
+ * maxzoom 				- the maximum zoom level, equal to the deepest period level
+ * minzoom 				- minimum zoom level
+ * periods 				- JSON object representing the periods, optionally hierarchical
+ * scrollspeed			- scroll speed for _autoScroll feature, 0 to disable _autoScroll
+ * step					- minimal width (in pixels) of the period in the timeline
+ * to					- index of the last period in selection
+ * zoomlevel			- initial zoom level
+ * 
+ * EVENTS:
+ * To add an eventlistener, add this to the option list on init: onEventName: function(){do stuff}
+ * onAutoScroll			- triggered when timelineslider is _autoScrolling (when thumb is dragged beyond the viewpane)
+ * onCreate				- triggered right after creation of the timelineslider 
+ * onScaleStart			- triggered when the left or right thumb handles start to get dragged
+ * onScale				- triggered when the left or right thumb handles are being dragged
+ * onScaleStop			- triggered when the left or right thumb handles are released after being dragged
+ * onSlideStart			- triggered when the thumb starts to get dragged
+ * onSlide				- triggered when the thumb is being dragged
+ * onSlideStop			- triggered when the thumb is released after being dragged
+ * onValueChange		- triggered when the selected period has changed
+ * onZoomChange			- triggered when a zoom in or out occurs
+ * 
+ * METHODS:
+ * To call a method, use $(selector).timelineSlider("nameOfMethod", parameters)
+ * from([index])		- sets from value, when index is omitted gets from value
+ * to([index])			- sets to value, when index is omitted gets to value
+ * setValue(val)		- sets a new from and to value, accepts an object with from and to {from:val1,to:val2} // OBSOLETE
+ * values([val])		- sets sets a new from and to value, accepts an object with from and to {from:val1,to:val2}, when omitted gets values object
+ * setZoomLevel(level)	- sets the zoom level, accepts integer // OBSOLETE
+ * zoom([level])		- sets zoomlevel value, when level is omitted gets zoomlevel value
+ * getPeriod(index)		- returns the period object with the given index
+ * destroy				- removes the timelineslider component
+ */
